2010-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpStandaloneReplyChannel.cs, HttpStandaloneRequestContext.cs:
	  add more code that the asp.net stuff will become like.

2010-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpStandaloneReplyChannel.cs, HttpListenerManager.cs,
	  HttpStandaloneRequestContext.cs :
	  refactoring, to add ASP.NET implementation. (not in use yet)

2010-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpContextInfo.cs, HttpListenerManager.cs,
	  HttpListenerManagerTable.cs : add implementation for ASP.NET, not
	  in use yet.

2010-06-24  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : finish pending wait handle when closing
	  a listener. Fixed the issue on closing host/listener/channels.

2010-06-24  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpStandaloneReplyChannel.cs : do not try to enter close loop
	  between request context and this.

2010-06-23  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpStandaloneChannelListener.cs
	  HttpStandaloneReplyChannel.cs
	  HttpStandaloneRequestContext.cs
	  HttpListenerManagerTable.cs
	  HttpChannelListenerEntry.cs
	  HttpContextInfo.cs
	  HttpListenerManager.cs :
	  Refresh implementation for HTTP channel listener in new namespace,
	  which works fine with throttling.

	  It still has some issue in closing channels or listeners, so it
	  does not replace existing implementation yet.